# supernova_simulation

./: CMakeLists.txt  LICENSE.txt  README.md  main.cpp  todo.txt
include/: particle.h  particle_system.h  shader.h
src/: particle.cpp  particle_system.cpp  shader.cpp
